# c_playground

./: CMakeLists.txt
docs/: install  links.txt
docs/src/: main_map_ini_log_db.c  map.c  map.h
include/: core.h  d_convert.h  d_field.h  d_fields.h  d_record.h  d_table.h  map.h  sqlitehelper.h
include/test/: core_hello.h  data_hello.h  gtk_hello.h  ini_hello.h  log_hello.h  map_hello.h  sqlite_hello.h
src/: core.c  d_convert.c  d_field.c  d_fields.c  d_record.c  d_table.c  main.c  map.c
src/test/: core_hello.c  data_hello.c  gtk_hello.c  ini_hello.c  log_hello.c  map_hello.c  sqlite_hello.c
